<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >
    <androidx.core.widget.NestedScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="320dp"
                android:layout_height="87dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/login_top_logo_top_margin"
                android:layout_marginBottom="@dimen/login_top_logo_bottom_margin"

                android:src="@drawable/ic_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/text_sub_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_id_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_top_margin"
                android:layout_marginStart="@dimen/login_edittext_left_right_margin"
                android:layout_marginEnd="@dimen/login_edittext_left_right_margin" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_id_text_input_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_edittext_layout_height"
                    android:background="@null"
                    android:inputType="textVisiblePassword"
                    android:textSize="@dimen/login_edittext_font_size"
                    android:textColor="@color/color_text_login_edittext"
                    android:textColorHint="@color/color_light_hint_text_login_edittext"
                    android:hint="@string/login_id_edt_hint_not_focused" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/login_id_text_input_layout_bottom_border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/login_edittext_left_right_margin"
                android:layout_marginEnd="@dimen/login_edittext_left_right_margin"
                android:background="@color/color_edittext_bottom_line_not_focused" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_pwd_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_edittext_between_margin"
                android:layout_marginStart="@dimen/login_edittext_left_right_margin"
                android:layout_marginEnd="@dimen/login_edittext_left_right_margin" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_pwd_text_input_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_edittext_layout_height"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"
                    android:textSize="@dimen/login_edittext_font_size"
                    android:textColor="@color/color_text_login_edittext"
                    android:textColorHint="@color/color_light_hint_text_login_edittext"
                    android:hint="@string/login_pwd_edt_hint_not_focused" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/login_pwd_text_input_layout_bottom_border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/login_edittext_left_right_margin"
                android:layout_marginEnd="@dimen/login_edittext_left_right_margin"
                android:background="@color/color_edittext_bottom_line_not_focused" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical" >
                <Button
                    style="@style/AMButton.BorderlessButton"
                    android:id="@+id/login_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_login_button_layout_height"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_login_login_btn"
                    android:enabled="false"
                    android:textSize="@dimen/login_login_button_text_size"
                    android:textColor="@color/textcolor_login_login_button"
                    android:text="@string/login_login_btn_text" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>